app类型
